jquery & jqeuryMobile Integration

--- a/PhoneZxing/www/index.html
+++ b/PhoneZxing/www/index.html
@@ -8,6 +8,7 @@
 
     <title>PhoneZxing</title>
 	
+    <link rel="stylesheet" href="jqueryMobile/jquery.mobile-1.0a4.1.min.css" type="text/css" />
 	<!-- iPad/iPhone specific css below, add after your main css >
 	<link rel="stylesheet" media="only screen and (max-device-width: 1024px)" href="ipad.css" type="text/css" />		
 	<link rel="stylesheet" media="only screen and (max-device-width: 480px)" href="iphone.css" type="text/css" />		
@@ -15,6 +16,8 @@
 	<!-- If you application is targeting iOS BEFORE 4.0 you MUST put json2.js from http://www.JSON.org/json2.js into your www directory and include it here -->
 	<script type="text/javascript" charset="utf-8" src="phonegap.0.9.4.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="barcodescanner.js"></script>
+    <script type="text/javascript" charset="utf-8" src="jquery.js"></script>
+    <script type="text/javascript" charset="utf-8" src="jqueryMobile/jquery.mobile-1.0a4.1.min.js"></script>
     <script type="text/javascript" charset="utf-8">
 
 
@@ -35,30 +38,39 @@
      );
 	*/
 	
-	function onBodyLoad()
-	{
-		document.addEventListener("deviceready",onDeviceReady,false);
-	}
+        function onBodyLoad(){
+            document.addEventListener("deviceready",onDeviceReady,false);
+        }
 	
-	/* When this function is called, PhoneGap has been initialized and is ready to roll */
-	function onDeviceReady()
-	{
-		// do your thing!
-	}
+        /* When this function is called, PhoneGap has been initialized and is ready to roll */
+        function onDeviceReady(){
+            // do your thing!
+        }
         
         function scan(){
-            alert("Scan");
             window.plugins.barcodeScanner.scan( BarcodeScanner.Type.QR_CODE, function(result) {
-                                               alert("We got a barcode: " + result);
+                                                alert("We got a barcode: " + result);
+                                                $("#scanErgebnis").html(result);
                                                }, function(error) {
-                                               alert("Scanning failed: " + error);
+                                                alert("Scanning failed: " + error);
                                                }
-                                               );
+            );
         }
     
     </script>
   </head>
   <body onload="onBodyLoad()">
-  	<h1 onclick="scan()">Scan</h1>
+      <div data-role="page" data-theme="b">
+          <div data-role="header" data-theme="b">
+              <h1>Scanning</h1>
+          </div>
+          <div data-role="content">
+              <button onclick="scan()">Scan</button>
+              <span id="scanErgebnis"></span>
+          </div>
+          <div data-role="footer" data-position="fixed">
+              <h1>&copy; FHSTP - Mobile Forschungsgruppe</h1>
+          </div>
+      </div>
   </body>
 </html>
